# bitops

./: .gitignore  CMakeLists.txt  README.md  bitops_tst.cpp  bits.h  bits_experimental.h  bits_test.cpp  bits_test.h  here.cpp  here.h  types.h
compiler_tests/: package.json
compiler_tests/fail/: test_unmatched_bits.cpp
compiler_tests/pass/: b3_assign_b3.cpp
demo/: CMakeLists.txt  main.cpp
ext/: bits_ex.h
here/: CMakeLists.txt  here.h
src/: CMakeLists.txt  bit_macro_counts.h  bitops.cpp  bitops.h  bits.h
test/: CMakeLists.txt
test/compiler/: CMakeLists.txt  test_compiler_test.js
test/compiler/fail/: m2.cpp  main.cpp
test/functional/: CMakeLists.txt  CMakeLists.txt.autosave  bits_test.cpp
